RbA Build/src/objects/SVMXC__Service_Order__c.object
<CustomObject>
    <customHelp>SVMXC__SVMXC_LaunchHelp</customHelp>
    <description>Service Order is used to plan, execute and manage Service events for Field and Depot Service activities. Depending upon the service scenario, the order creation can be triggered by many events: When creating a Support Case, when one or more installed products require periodic service or calibration, when troubleshooting a customer problem on the field, if the field service engineer learns that the product requires specialized conditions of a factory/depot to resolve the problem, or when a new/repair shipment to customer requires specialized installation activity.</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>If Installation Date is Blank, default to Today - Rennovate Right Date otherwise use Installation Date.</description>
        <formula>IF(
ISBLANK(Sold_Order__r.Installation_Date__c), TODAY()- Renovate_Right_Booklet_Signed_Date__c, Sold_Order__r.Installation_Date__c  - Renovate_Right_Booklet_Signed_Date__c)</formula>
        <inlineHelpText>Sold_Order__r.Installation_Date__c  - Renovate_Right_Booklet_Signed_Date__c</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <inlineHelpText>Date Application was applied for</inlineHelpText>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bond_Amount__c</fullName>
        <inlineHelpText>Total for the Bond</inlineHelpText>
        <label>Bond Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bond_Issue_Date__c</fullName>
        <inlineHelpText>What date was the Bond Issued?</inlineHelpText>
        <label>Bond Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bond_Refund_Amount__c</fullName>
        <inlineHelpText>Amount to refund for the Bond</inlineHelpText>
        <label>Bond Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bond_Refund_Date__c</fullName>
        <inlineHelpText>Date Bond was refunded.</inlineHelpText>
        <label>Bond Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bond_Required__c</fullName>
        <formula>IF  
(Municipality__r.Bond_Required__c = TRUE, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicated from Municipality table.</inlineHelpText>
        <label>Bond Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Returned_Check_Num__c</fullName>
        <inlineHelpText>The check number that was returned to the customer.</inlineHelpText>
        <label>Bond Returned Check #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Application_Type__c</fullName>
        <formula>Text( Municipality__r.Building_Application_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Application Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Company doing the work.</inlineHelpText>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (Company)</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <inlineHelpText>Date Application was received.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPA_Form_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EPA Form Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Inspection_Date__c</fullName>
        <inlineHelpText>Date the Final Inspection is scheduled for</inlineHelpText>
        <label>Final Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Cancelled_Reason__c</fullName>
        <inlineHelpText>Reason inspection was cancelled</inlineHelpText>
        <label>Inspection Cancelled Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No longer needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XYZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Cancelled__c</fullName>
        <inlineHelpText>Date the inspection was cancelled</inlineHelpText>
        <label>Inspection Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Completed__c</fullName>
        <inlineHelpText>Date inspection was completed</inlineHelpText>
        <label>Inspection Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Scheduled_Date_Time__c</fullName>
        <inlineHelpText>What date and time is the inspection scheduled?</inlineHelpText>
        <label>Inspection Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Test_Results__c</fullName>
        <label>Lead Test Results</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presumed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Municipality_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipality Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Municipality Contact must be attached to the Municipality associated to the Work Order.</errorMessage>
            <filterItems>
                <field>$Source.Municipality__c</field>
                <operation>equals</operation>
                <valueField>Municipality_Contact__c.Municipality__c</valueField>
            </filterItems>
            <infoMessage>The Municipality Contact must be attached to the Municipality associated to the Work Order.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Municipality_Contact__c</referenceTo>
        <relationshipLabel>Permit Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What Municipality does this Dwelling fall into?</inlineHelpText>
        <label>Municipality</label>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Permit Work Orders</relationshipLabel>
        <relationshipName>Work_Orders_Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Num_of_Windows__c</fullName>
        <inlineHelpText>Number of Windows needing to be measured.</inlineHelpText>
        <label># of Windows</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paint_Stain_Invoice_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paint/Stain Invoice Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paint_Stain_Order_Attached_to_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paint/Stain Order Attached to Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the permit is attached, check box</inlineHelpText>
        <label>Permit Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Fee__c</fullName>
        <inlineHelpText>Total Cost of Permit Fees</inlineHelpText>
        <label>Permit Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Permit_Number__c</fullName>
        <inlineHelpText>Permit Number</inlineHelpText>
        <label>Permit Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Sent_To__c</fullName>
        <inlineHelpText>Who was the permit sent to?</inlineHelpText>
        <label>Permit Sent To</label>
        <picklist>
            <picklistValues>
                <fullName>Homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permit_Status__c</fullName>
        <label>Permit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Inspection_Completed__c</fullName>
        <inlineHelpText>Date inspection was completed</inlineHelpText>
        <label>Pre-Inspection Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Inspection_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Inspection Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Inspection_Scheduled_Date_Time__c</fullName>
        <inlineHelpText>What date and time is the inspection scheduled?</inlineHelpText>
        <label>Pre-Inspection Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>This allows us to have better reporting and to see high level the reason the Work Order has moved into this status.</inlineHelpText>
        <label>Reason</label>
        <picklist>
            <controllingField>SVMXC__Order_Status__c</controllingField>
            <picklistValues>
                <fullName>Customer on Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales to Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age of home built after 1978</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renovate_Right_Booklet_Signed_Date__c</fullName>
        <formula>Sold_Order__r.Renovate_Right_Booklet_Signed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renovate Right Booklet Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_sent_to_Paint_Stain_Vendor__c</fullName>
        <inlineHelpText>The date the request was sent to vendor.</inlineHelpText>
        <label>Request sent to Paint/Stain Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Acknowledged_By_Technician_Date_Time__c</fullName>
        <description>Date and time when technician acknowledges the scheduled work order</description>
        <inlineHelpText>Date and time when technician acknowledges the scheduled work order</inlineHelpText>
        <label>Acknowledged By Technician Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Initial_Response__c</fullName>
        <description>Date/time on which customer was initial responsed as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was initial responsed as per commitment in SLA.</inlineHelpText>
        <label>Actual Initial Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Onsite_Response__c</fullName>
        <description>Date/time on which customer was onsite responsed as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was onsite responsed as per commitment in SLA.</inlineHelpText>
        <label>Actual Onsite Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Resolution__c</fullName>
        <description>Date/time on which customer was resolved as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was resolved as per commitment in SLA.</inlineHelpText>
        <label>Actual Resolution</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Restoration__c</fullName>
        <description>Date/time on which customer was restored as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was restored as per commitment in SLA.</inlineHelpText>
        <label>Actual Restoration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Age_Bucket__c</fullName>
        <description>Age of the service order grouped in buckets for reporting purposes.</description>
        <formula>IF (SVMXC__Age__c &lt;= 7, &quot;Less Than 8 days&quot;, 
IF (SVMXC__Age__c &lt;= 15, &quot;8 To 15 days&quot;, 
IF (SVMXC__Age__c &lt;= 30, &quot;16 to 30 days&quot;, 
&quot;More Than 30 days&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the service order grouped in buckets for reporting purposes.</inlineHelpText>
        <label>Age Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Age__c</fullName>
        <description>Age of the service order for reporting purposes.</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the service order for reporting purposes.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Apply_Business_Hours_For_OptiMax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if Preferred Window for Work Order is based on SLA/Access Hours</description>
        <inlineHelpText>Flag to indicate if Preferred Window for Work Order is based on SLA/Access Hours</inlineHelpText>
        <label>Apply Business Hours For OptiMax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Appointment_Promised_Time_Slot__c</fullName>
        <label>Promised Appointment Time Slot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Auto_Entitlement_Status__c</fullName>
        <label>Auto Entitlement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__BatchUpdate__c</fullName>
        <description>This is an internal field used to resolve conflicts between immediate work order updates and batch updates done by OptiMax.</description>
        <inlineHelpText>This is an internal field used to resolve conflicts between immediate work order updates and batch updates done by OptiMax.</inlineHelpText>
        <label>Batch Update</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Billing_Type__c</fullName>
        <description>How the service order expenses will be accounted for. Agreement, Paid etc.</description>
        <inlineHelpText>How the service order expenses will be accounted for. Agreement, Paid etc.</inlineHelpText>
        <label>Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empowerment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_Date_Time__c</fullName>
        <description>Date and time when technician rejects or cancels or dispatcher cancels the work order</description>
        <inlineHelpText>Date and time when technician rejects or cancels or dispatcher cancels the work order</inlineHelpText>
        <label>Canceled Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support Case from which this service order originated. Is a lookup to an existing salesforce case record</description>
        <inlineHelpText>Support Case from which this service order originated. Is a lookup to an existing salesforce case record</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__City__c</fullName>
        <description>“City” part of the work order location.</description>
        <inlineHelpText>“City” part of the work order location.</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Clock_Paused_Forever__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clock Paused Forever</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that closed this service order. Is a lookup to an existing salesforce user.</description>
        <inlineHelpText>User that closed this service order. Is a lookup to an existing salesforce user.</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Order_Closed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_On__c</fullName>
        <description>Date/time when this service order was closed.</description>
        <inlineHelpText>Date/time when this service order was closed.</inlineHelpText>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Account initiating this service order. Is a lookup to an existing salesforce account record</description>
        <inlineHelpText>Customer Company initiating this service order. Is a lookup to an existing salesforce account record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Completed_Date_Time__c</fullName>
        <description>Date and time when technician completes (closes) the work order</description>
        <inlineHelpText>Date and time when technician completes (closes) the work order</inlineHelpText>
        <label>Completed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</description>
        <inlineHelpText>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
        <label>Component</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>Service_Order_Component</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Configuration_After__c</fullName>
        <description>Snapshot of the product’s technical details after the engineer(s) resolved/addressed the issue</description>
        <inlineHelpText>Snapshot of the product’s technical details after the engineer(s) resolved/addressed the issue</inlineHelpText>
        <label>Configuration - After</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Configuration_Before__c</fullName>
        <description>Snapshot of the product’s technical details before the engineer(s) started addressing it</description>
        <inlineHelpText>Snapshot of the product’s technical details before the engineer(s) started addressing it</inlineHelpText>
        <label>Configuration - Before</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the contact person from the customer account for this service order. Is a lookup to an existing salesforce contact record</description>
        <inlineHelpText>Name of the contact person from the customer account for this service order. Is a lookup to an existing salesforce contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Corrective_Action__c</fullName>
        <description>Any corrective action taken by your engineer(s) to address the customer feedback</description>
        <inlineHelpText>Any corrective action taken by your engineer(s) to address the customer feedback</inlineHelpText>
        <label>Corrective Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Country__c</fullName>
        <description>“Country” part of the work order location</description>
        <inlineHelpText>“Country” part of the work order location</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Customer_Down_Status__c</fullName>
        <description>Indicates as Yes or No if this work order is about a customer down situation.</description>
        <formula>IF (SVMXC__Customer_Down__c = true, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Indicates as Yes or No if this work order is about a customer down situation.</inlineHelpText>
        <label>Customer Down Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Customer_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the customer situation is critical affecting uptime due to the problem reported</description>
        <inlineHelpText>If the customer situation is critical affecting uptime due to the problem reported</inlineHelpText>
        <label>Customer Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Customer_Failure_Feedback__c</fullName>
        <description>Feedback given by the customer about the overall failure event and how your organization responded</description>
        <inlineHelpText>Feedback given by the customer about the overall failure event and how your organization responded</inlineHelpText>
        <label>Customer Failure Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Now__c</fullName>
        <label>Dispatch Now</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Priority__c</fullName>
        <description>Work order priority bucket as defined in the dispatch process. Calculated automatically</description>
        <label>Dispatch Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dispatch process using which this work order will be scheduled</description>
        <label>Dispatch Process</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Response__c</fullName>
        <description>To capture the response of the technician whether he/she accepts or rejects the work order assigned.</description>
        <inlineHelpText>To capture the response of the technician whether he/she accepts or rejects the work order assigned.</inlineHelpText>
        <label>Dispatch Response</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Status__c</fullName>
        <description>Indicates in which stage the work order is in.</description>
        <formula>IF(AND( SVMXC__Service_Group__c=null , SVMXC__Group_Member__c =null),&quot;New&quot;, IF(AND( SVMXC__Service_Group__c&lt;&gt;null , SVMXC__Group_Member__c =null),&quot;Queued&quot;,IF(SVMXC__Group_Member__c &lt;&gt;null,&quot;Assigned&quot;,&apos;New&apos;)))</formula>
        <inlineHelpText>Indicates in which stage the work order is in.</inlineHelpText>
        <label>Dispatch Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Drip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether the Work Order is ready to be delivered to mobile application</description>
        <inlineHelpText>Flag to indicate whether the Work Order is ready to be delivered to mobile application</inlineHelpText>
        <label>Drip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Driving_Time__c</fullName>
        <label>Driving Time (in Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__EndpointURL__c</fullName>
        <description>Not used</description>
        <formula>$Api.Enterprise_Server_URL_70</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndpointURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Notes__c</fullName>
        <description>Entitlement Notes</description>
        <label>Entitlement Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Type__c</fullName>
        <label>Entitlement Type</label>
        <picklist>
            <picklistValues>
                <fullName>AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERACTIVE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Failed_Assembly__c</fullName>
        <description>The assembly of your product that failed.</description>
        <inlineHelpText>The assembly of your product that failed.</inlineHelpText>
        <label>Failed Assembly</label>
        <picklist>
            <picklistValues>
                <fullName>Sample Value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Value2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Failure_Location__c</fullName>
        <description>Where the product failed, field or depot</description>
        <inlineHelpText>Where the product failed, field or depot</inlineHelpText>
        <label>Failure Location</label>
        <picklist>
            <picklistValues>
                <fullName>Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Finished_Onsite_Date_Time__c</fullName>
        <description>Date and time when technician finishes working on the work order at site</description>
        <inlineHelpText>Date and time when technician finishes working on the work order at site</inlineHelpText>
        <label>Finished Onsite Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__FirstScheduledDateTime__c</fullName>
        <description>Datetimestamp the work order was scheduled to a technician for the very first time.</description>
        <inlineHelpText>Datetimestamp the work order was scheduled to a technician for the very first time.</inlineHelpText>
        <label>First Scheduled DateTime</label>
        <type>DateTime</type>
    </fields>
</CustomObject>